# mcp_totg

./: 00_READ_ME_FIRST.txt  BEFORE_AFTER.md  BROKEN_PARTS_ANALYSIS.md  DOWNLOAD_INSTRUCTIONS.md  DUPLICATE_LOGIC_ANALYSIS.md  FINAL_VERIFICATION.txt  INDEX.md  MARKOVIAN_INTEGRATION.md  MARKOVIAN_README.md  MCP_SETUP.md  MCP_UVX_SETUP.md  README.md  START_HERE.txt  SUMMARY.md  TEST_REPORT.md  WINDOWS_UVX_SETUP.md  bug_fix_demo.py  install.sh  markovian_demo.py  pyproject.toml  quick_start.py  requirements.txt  simple_test.py  test_fix_verification.py  test_mcp_server.py  test_performance_fix.py  test_serialization_issues.py  test_totg_functionality.py  totg_api.py  totg_attention_fixed.py  totg_core_fixed.py  totg_markovian.py  totg_markovian_tests.py  totg_mcp_server.py  totg_tests_additional.py  totg_tests_comprehensive.py
to-do-integr/: MARKOVIAN_IMPLEMENTATION_REPORT.md  MARKOVIAN_QUICK_START.md  totg_markovian.py  totg_markovian_tests.py
totg_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
