[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "totg-mcp"
version = "1.0.0"
description = "Temporal Oriented Temporal Graph MCP Server"
authors = [{name = "Andrew", email = "andrew@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "numpy>=1.24.0"
]

[project.scripts]
totg-mcp = "totg_mcp_server:main"

[tool.setuptools]
py-modules = ["totg_mcp_server", "totg_api"]
[project.urls]
Homepage = "https://github.com/yourusername/totg-complete"
Repository = "https://github.com/yourusername/totg-complete"
